#1477 fix quota field in orders basket (#1482)
* #1477 fix quota field in orders basket

* #1477 fix scrollbar

* 1477 fix scrollbar try 2

---------

--- a/src/app/modules/dashboard/components/dashboard/dashboard.component.less
+++ b/src/app/modules/dashboard/components/dashboard/dashboard.component.less
@@ -3,8 +3,10 @@
 .themeMixin({
   :host {
     gridster {
-      scrollbar-width: thin;
-      scrollbar-color: @scrollbar-color transparent;
+      @supports not selector(::-webkit-scrollbar) {
+        scrollbar-width: thin;
+        scrollbar-color: @scrollbar-color transparent;
+      }
 
       &::-webkit-scrollbar {
         width: 12px;
